Fix immutable list bug.