@@ -2,6 +2,7 @@ package net.runelite.rsb.query.request;
 
 import net.runelite.rsb.wrappers.RSGroundItem;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static net.runelite.rsb.methods.MethodProvider.methods;
@@ -12,6 +13,6 @@ public class RSGroundItemQueryRequest extends PositionableQueryRequest<RSGroundI
     }
 
     public List request() {
-        return List.of(methods.groundItems.getAll());
+        return Arrays.asList(methods.groundItems.getAll());
     }
 }
