@@ -2,6 +2,7 @@ package net.runelite.rsb.query.request;
 
 import net.runelite.rsb.wrappers.RSObject;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static net.runelite.rsb.methods.MethodProvider.methods;
@@ -11,6 +12,6 @@ public class RSObjectQueryRequest extends PositionableQueryRequest<RSObject> {
         super( 26);
     }
     public List<RSObject> request() {
-        return List.of(methods.objects.getAll());
+        return Arrays.asList(methods.objects.getAll());
     }
 }
