@@ -3,6 +3,7 @@ package net.runelite.rsb.query.request;
 
 import net.runelite.rsb.wrappers.RSPlayer;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static net.runelite.rsb.methods.MethodProvider.methods;
@@ -12,6 +13,6 @@ public class RSPlayerQueryRequest extends PositionableQueryRequest<RSPlayer> {
         super(Integer.MAX_VALUE);
     }
     public List<RSPlayer> request() {
-        return List.of(methods.players.getAll());
+        return Arrays.asList(methods.players.getAll());
     }
 }
